nav fix on mobile?

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -33,7 +33,8 @@ header {
   
 nav {  
   grid-row: 2;  
-  grid-column: 3;  
+  grid-column: 3;
+  padding: 20px;    
   color: #444444;  
   justify-content: space-between;  
   align-items: center;  
@@ -82,6 +83,5 @@ footer {
   text-align: center;  
   background-color: #959595;   
   display: flex; 
-  min-width: 0;//needs to be set
 }
 
